--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: IMQCAM Documentation
-author: The IMQCAM Data Team
-logo: logo.png
+title: PARADIM Documentation
+author: The PARADIM Data Team
+logo: PARADIM_logo_small.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -13,7 +13,7 @@ execute:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname: imqcam_docs.tex
+    targetname: paradim_docs.tex
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
@@ -21,7 +21,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/imqcam/documentation  # Online location of your book
+  url: https://github.com/paradimdata/documentation  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
