--- a/_toc.yml
+++ b/_toc.yml
@@ -5,7 +5,7 @@ format: jb-book
 root: docs/intro.md
 
 parts:
-- caption: The IMQCAM Data Portal
+- caption: The PARADIM Data Portal
   chapters: 
   - file: docs/data_portal/upload_forms
 - caption: Documentation User's Guide
