--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,4 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+  baseurl: https://paradimdata.github.io/documentation
